2008-01-14  Denis Washington  <denisw@svn.gnome.org>

	* gnome-mouse-properties.glade:
	Add translation context to some labels. (Bug #509417)

2008-01-14  Denis Washington  <denisw@svn.gnome.org>

	Integrate mousetweaks settings into the mouse capplet. (Bug #503547)

	* gnome-mouse-properties.glade:
	Merge the previous "Buttons" and "Motion" tabs into one, and add a new
	"Accessibility" tab with the mousetweaks preferences. Additionally, re-add
	the "Locate Pointer" preference which disappeared in 2.20. (Bug #480457)

	* gnome-mouse-properties.c:
	Call setup function for the a11y tab, update for a small UI change regarding
	handness preferences, and implement the locate-pointer checkbox.

	* gnome-mouse-accessibility.[ch]:
	Added.

	* Makefile.am:
	Add gnome-mouse-accessibility.c.

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-mouse-properties.glade: don't mark padding string as
	translatable (bug #502087)

2007-07-27  Denis Washington  <denisw@svn.gnome.org>

	* Makefile.am:
	Don't try to install mouse-cursor-*.png as these files are not in mouse/
	anymore.

2007-07-27  Denis Washington  <denisw@svn.gnome.org>

	* cursor-*.pcf:
	* mouse-cursor-*.png:
	Moved to ../appearance/data/.

2007-07-26  Denis Washington  <denisw@svn.gnome.org>

	* gnome-mouse-properties.glade:
	* gnome-mouse-poperties.c:
	Remove the Cursors tab as it's functionality is covered by the apperance
	capplet now.

2007-05-08  Jens Granseuer  <jensgr@gmx.net>

	* gnome-mouse-properties.c: (cursor_size_from_widget),
	(setup_dialog):
	* gnome-mouse-properties.glade: port from deprecated GtkOptionMenu to
	GtkComboBox

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-mouse.desktop.in.in: renamed Bugzilla product.

2007-03-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Andreas Koehler <andi5.py@gmx.net>

	* gnome-mouse-properties.glade: use automatic instead of always
	scrollbar policy for the mouse pointer tab (fixes #345884)

2007-03-05  Jens Granseuer  <jensgr@gmx.net>
