@@ -1,3 +1,9 @@
+2008-01-25  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-mouse-properties.c: (delay_value_changed_cb), (setup_dialog):
+	remove left-over callback that was causing the capplet to set a label
+	on a NULL widget (bug #510425)
+
 2008-01-14  Denis Washington  <denisw@svn.gnome.org>
 
 	* gnome-mouse-properties.glade:
